# threads-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/threads/: env.example
examples/threads/scripts/: inbox.py  report_payload.py  setup_venv.sh
skills/threads/: .gitignore  README.md  SKILL.md
skills/threads/evals/: evals.json
skills/threads/references/: cli-cheatsheet.md  endpoints.md  setup-meta-app.md
skills/threads/scripts/: dashboard.py  moderate.py  posting.py
skills/threads/tests/: smoke.sh
src/threads_cli/: __init__.py  __main__.py  api.py  auth.py  cli.py
